k8s/staging/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: staging

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: 622488711452.dkr.ecr.us-east-1.amazonaws.com/devops-frontend:v3
        imagePullPolicy: Always

        ports:
        - containerPort: 80
