k8s/staging/backend-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-rollout-demo
  namespace: staging
spec:
  replicas: 2

  strategy:
    canary:
      steps:
      - setWeight: 50
      - pause:
          duration: 60s
      - setWeight: 100

  selector:
    matchLabels:
      app: backend-rollout-demo

  template:
    metadata:
      labels:
        app: backend-rollout-demo
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: 622488711452.dkr.ecr.us-east-1.amazonaws.com/devops-backend:v2
        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-rollout-demo-service
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: backend-rollout-demo
  ports:
  - port: 5000
    targetPort: 5000
