k8s/staging/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: backend-rollout-demo
  ports:
  - port: 5000
    targetPort: 5000
